@startuml

title Class Diagram

package messeption.core <<Frame>> {
    Abstract class UserTextSubmission {
        # String text
        # int likes
        # int dislikes
        # String timeStamp
        .. Getters ..
        + String getText()
        + int getLikes()
        + int getDislikes()
        + String getTimeStamp()
        .. Setters ..
        + void setLikes()
        + void setDislikes()
        ..Other..
        + {abstract} String toString() 
    }
    class ForumBoard {
        - List<ForumPost> posts
        .. Getters ..
        + List<ForumPost> getPosts()
        + Forumpost getPost(int i)
        .. Posts Manip ..
        + void newPost(String title, String text)
        + void deletePost(ForumPost post)
        
    }
    class PostComment extends UserTextSubmission {
        + String toString()
    }
    class ForumPost extends UserTextSubmission {
        - String title
        - List<PostComment> comments
        .. Getters ..
        + String getTitle()
        + List<PostComment> getComments()
        .. Other ..
        + String toString()
    }
    
    ForumPost -left-> "*" PostComment
    ForumPost "*" <-down- ForumBoard
}

package messeption.json <<Frame>> {
    class JSONReadWrite {
        + {static} String ROOT_PATH
        + {static} String UI_PATH
        + {static} String DEFAULT_BOARD_FILE
        
        + {static} ForumBoard fileRead(String filePath, String fileName)
        + {static} ForumBoard fileRead()
        
        + {static} void fileWrite(String filePath, String fileName)
        + {static} void fileWrite()
    }
}

package messeption.ui <<Frame>> {
    class MesseptionApp {
        - Scene frontPageScene
        - Scene createPostPageScene
        - FrontPageController frontPageController
        - CreatePostPageController createPostPageController
        + void start(Stage primaryStage)
    }
    class FrontPageController {
        - {static} int SIZE_POSTS
        - {static} int MARGIN_TOP
        - {static} int MARGIN_POSTS
        - ForumBoard forumBoard
        + void initialize()
        .. Getters ..
        + ForumBoard getBoard()
        .. Setters ..
        + void setBoard(Forumboard board)
        .. Save and draw methods ..
        + void writeBoard()
        + void drawPosts()
        - Pane generatePostPane(String title, String text, int likes, int dislikes, int indexId)
    }
    class CreatePostPageController {
        - ForumBoard board
        + void initialize()
        ..Setters..
        + void setBoard(ForumBoard board)
        .. Save and draw methods ..
        + void createPostInBoard()
        + void feedbackAlertPostCreation(String title)
        + void showError(String e)
        + void reloadPage()
    }
    class PostPageController {
        - {static} int SIZE_COMMENTS
        - {static} int MARGIN_COMMENTS
        - ForumPost post
        - ForumBoard forumBoard
        + void initialize()
        .. Setters ..
        + void setPost(ForumPost post)
        + void setForumBoard(ForumBoard board)
        .. Save and draw methods ..
        + void drawComments()
        - void generatePostContent()
        - Pane generateCommentPane(PostComment comment, int indexId)
        - Node getNodeFromId(List<Node> children, String id)
        - void publishCommnt()
        
    }
    
    class UiUtils {
        + {static} Node getNodeFromId(List<Node> children, String id)
        + {static} Alert exceptionAlert(Exception e)
    }
    
    MesseptionApp --> "1" FrontPageController
    MesseptionApp --> "1" CreatePostPageController
    MesseptionApp -left-> "1" PostPageController
    ForumPost "1" <-left- PostPageController
    ForumBoard "1" <-- CreatePostPageController
    ForumBoard "1" <-left- FrontPageController
    ForumBoard "1" <-- PostPageController
    MesseptionApp -[hidden]-> UiUtils
}
messeption.core -[hidden]-> messeption.ui
@enduml
